--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
 
     <!-- ========================== hero Image ========================== -->
     <section id="hero">
-        <div class="container-fluid container-hero text-center" id="hero-image"></div>
-        <div>
-            <h1 class="hero-title text-center text-danger">
+        <div class="card">
+            <img class="card-img" src="static/images/holly10.jpg" alt="">
+        </div>
+        <div class="card-img-overlay text-white d-flex justify-content-center align-items-end">
+            <h1 class="hero-title text-danger">
                 Hollys' Photo Album
             </h1>
         </div>
@@ -66,61 +68,60 @@
           
     <h2 class="text-center text-uppercase my-3">Doing what I do best....ZZZZZZZZ</h2>
     <div class="row">
-        <div class=" col-4 img" style="background-image: url('static/images/image19.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/holly4.jpg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image1.jpeg')"></div>
-        <div class=" col-4 offset-2 img" style="background-image: url('static/images/holly12.jpg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/holly13a.jpg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image19.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/holly4.jpg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image1.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 offset-md-2 img img-thumbnail" style="background-image: url('static/images/holly12.jpg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/holly13a.jpg')"></div>
     </div>
     <h2 class="text-center text-uppercase my-3">Whats on Tele?</h2>
     <div class="row">
-        <div class=" col-4 img" style="background-image: url('static/images/holly3.jpg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/holly7.jpg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/holly5.jpg')"></div>    
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/holly3.jpg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/holly7.jpg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/holly5.jpg')"></div>    
     </div>
     <h2 class="text-center text-uppercase my-3">The bald bloke who feeds me</h2>
     <div class="row">
-        <div class=" col-4 offset-1  img" style="background-image: url('static/images/image3.jpeg')"></div>        
-        <div class=" col-4 offset-2  img" style="background-image: url('static/images/image4.jpeg')"></div>    
+        <div class=" col-sm-6 col-md-4 offset-md-1  img rounded-circle img-thumbnail" style="background-image: url('static/images/image3.jpeg')"></div>        
+        <div class=" col-sm-6 col-md-4 offset-md-2  img rounded-circle img-thumbnail" style="background-image: url('static/images/image4.jpeg')"></div>    
     </div>
     <h2 class="text-center text-uppercase my-3">Places I'm not allowed on (Yeah OK!)</h2>
     <div class="row">
-        <div class=" col-4 img" style="background-image: url('static/images/image14.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/holly8.jpg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image23.jpeg')"></div>    
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image14.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/holly8.jpg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image23.jpeg')"></div>    
     </div>
     <h2 class="text-center text-uppercase my-3">Ready for my Holiday</h2>
     <div class="row">
-        <div class=" col-4 img" style="background-image: url('static/images/image20.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image22.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image21.jpeg')"></div>    
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image20.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image22.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image21.jpeg')"></div>    
     </div>
     <h2 class="text-center text-uppercase my-3">Holiday Friends</h2>
     <div class="row">
-        <div class=" col-4 offset-2 img" style="background-image: url('static/images/image5.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image6.jpeg')"></div>        
-        <div class=" col-4 img" style="background-image: url('static/images/image8.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image7.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image9.jpeg')"></div>
-        <div class=" col-4 offset-2 img" style="background-image: url('static/images/image10.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image11.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 offset-md-2 img rounded-circle img-thumbnail" style="background-image: url('static/images/image5.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img rounded-circle img-thumbnail" style="background-image: url('static/images/image6.jpeg')"></div>        
+        <div class=" col-sm-6 col-md-4 img  img-thumbnail" style="background-image: url('static/images/image8.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img  img-thumbnail" style="background-image: url('static/images/image7.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img  img-thumbnail" style="background-image: url('static/images/image9.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 offset-md-2 img rounded-circle img-thumbnail" style="background-image: url('static/images/image10.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img rounded-circle img-thumbnail" style="background-image: url('static/images/image11.jpeg')"></div>
     </div>
     <h2 class="text-center text-uppercase my-3">Under the tree</h2>
     <div class="row">
-        <div class=" col-4 img" style="background-image: url('static/images/image17.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image15.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image18.jpeg')"></div>    
+        <div class=" col-sm-6 col-md-4 img rounded-circle img-thumbnail" style="background-image: url('static/images/image17.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img rounded-circle img-thumbnail" style="background-image: url('static/images/image15.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img rounded-circle img-thumbnail" style="background-image: url('static/images/image18.jpeg')"></div>    
     </div>
     <h2 class="text-center text-uppercase my-3">This is a strange house</h2>
     <div class="row">
-        <div class=" col-4 offset-2 img" style="background-image: url('static/images/image24.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image25.jpeg')"></div>        
-        <div class=" col-4 img" style="background-image: url('static/images/image26.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image27.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image28.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image30.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image32.jpeg')"></div>
-        <div class=" col-4 img" style="background-image: url('static/images/image31.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 offset-md-2 img img-thumbnail" style="background-image: url('static/images/image24.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image25.jpeg')"></div>        
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image26.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image27.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image30.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 offset-md-2 img img-thumbnail" style="background-image: url('static/images/image32.jpeg')"></div>
+        <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image31.jpeg')"></div>
     </div>
     
   
