update media links

--- a/index.html
+++ b/index.html
@@ -153,15 +153,7 @@
     <!-- ======================= footer ==================================== -->
     <footer>
       <div class="container-fluid media-contact row row-no-gutters py-1">
-        <div class="col-md-6 text-uppercase text-center">
-          <h5>Contact Us</h5>
-          <p class="mb-1">
-            Running Head Office, Running Street <br />
-            Running Town, RU1 23N<br />
-            0121 123 456
-          </p>
-        </div>
-        <div class="col-md-6 text-center">
+        <div class="col-12 text-center">
           <h5 class="social-media-title text-uppercase">Social Media</h5>
           <ul class="media-links list-inline">
             <li class="list-inline-item">
