add container-fluid class to picture sets

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <!-- ========================== hero Image ========================== -->
-    <section id="hero">
+    <div class="container-fluid" id="hero">
         <div class="card">
             <img class="card-img" src="static/images/holly10.jpg" alt="">
         </div>
@@ -68,11 +68,11 @@
             </h1>
         </div>
     
-    </section>
+    </div>
 
     <!-- =================== gallery =================================== -->
-   
-<div id="set1">      
+<div class="container-fluid">
+<div class="container-fluid" id="set1">      
     <h2 class="text-center text-uppercase my-3" >Doing what I do best....ZZZZZZZZ</h2>
     <div class="row" >
         <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image19.jpeg')"></div>
@@ -82,7 +82,7 @@
         <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/holly13a.jpg')"></div>
     </div>
 </div>
-<div id="set2">
+<div class="container-fluid" id="set2">
     <h2 class="text-center text-uppercase my-3">Whats on Tele?</h2>
     <div class="row">
         <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/holly3.jpg')"></div>
@@ -90,14 +90,14 @@
         <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/holly5.jpg')"></div>    
     </div>
 </div>
-<div id="set3">
+<div class="container-fluid" id="set3">
     <h2 class="text-center text-uppercase my-3">The bald bloke who feeds me</h2>
     <div class="row">
         <div class=" col-sm-6 col-md-4 offset-md-1  img rounded-circle img-thumbnail" style="background-image: url('static/images/image3.jpeg')"></div>        
         <div class=" col-sm-6 col-md-4 offset-md-2  img rounded-circle img-thumbnail" style="background-image: url('static/images/image4.jpeg')"></div>    
     </div>
 </div>
-<div id="set4">
+<div class="container-fluid" id="set4">
     <h2 class="text-center text-uppercase my-3">Places I'm not allowed on (Yeah OK!)</h2>
     <div class="row">
         <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image14.jpeg')"></div>
@@ -105,7 +105,7 @@
         <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image23.jpeg')"></div>    
     </div>
 </div>
-<div id="set5">
+<div class="container-fluid" id="set5">
     <h2 class="text-center text-uppercase my-3">Ready for my Holiday</h2>
     <div class="row">
         <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image20.jpeg')"></div>
@@ -113,7 +113,7 @@
         <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image21.jpeg')"></div>    
     </div>
 </div>
-<div id="set6">
+<div class="container-fluid" id="set6">
     <h2 class="text-center text-uppercase my-3">Holiday Friends</h2>
     <div class="row">
         <div class=" col-sm-6 col-md-4 offset-md-2 img rounded-circle img-thumbnail" style="background-image: url('static/images/image5.jpeg')"></div>
@@ -125,7 +125,7 @@
         <div class=" col-sm-6 col-md-4 img rounded-circle img-thumbnail" style="background-image: url('static/images/image11.jpeg')"></div>
     </div>
 </div>
-<div id="set7">
+<div class="container-fluid" id="set7">
     <h2 class="text-center text-uppercase my-3">Under the tree</h2>
     <div class="row">
         <div class=" col-sm-6 col-md-4 img rounded-circle img-thumbnail" style="background-image: url('static/images/image17.jpeg')"></div>
@@ -133,7 +133,7 @@
         <div class=" col-sm-6 col-md-4 img rounded-circle img-thumbnail" style="background-image: url('static/images/image18.jpeg')"></div>    
     </div>
 </div>
-<div id="set8">
+<div class="container-fluid" id="set8">
     <h2 class="text-center text-uppercase my-3">This is a strange house</h2>
     <div class="row">
         <div class=" col-sm-6 col-md-4 offset-md-2 img img-thumbnail" style="background-image: url('static/images/image24.jpeg')"></div>
@@ -144,6 +144,7 @@
         <div class=" col-sm-6 col-md-4 offset-md-2 img img-thumbnail" style="background-image: url('static/images/image32.jpeg')"></div>
         <div class=" col-sm-6 col-md-4 img img-thumbnail" style="background-image: url('static/images/image31.jpeg')"></div>
     </div>
+</div>
 </div>
     
   
