Add media query to push down imahe on mobile

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <!-- ========================== hero Image ========================== -->
-    <div class="container-fluid" id="hero">
+    <div class="container-fluid header-container">
         <div class="card">
             <img class="card-img" src="static/images/holly10.jpg" alt="">
         </div>
@@ -67,7 +67,6 @@
                 Hollys' Photo Album
             </h1>
         </div>
-    
     </div>
 
     <!-- =================== gallery =================================== -->
