update media query layout issue

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
     </header>
 
     <!-- ========================== hero Image ========================== -->
-    <div class="container-fluid header-container">
+    <div class="container-fluid header-container" id="hero">
         <div class="card">
             <img class="card-img" src="static/images/holly10.jpg" alt="">
-        </div>
-        <div class="card-img-overlay text-white d-flex justify-content-center align-items-end">
-            <h1 class="hero-title text-danger">
-                Hollys' Photo Album
-            </h1>
+             <div class="card-img-overlay text-danger d-flex justify-content-center align-items-end">
+                <h1 class="hero-title">
+                   <u> Hollys' Photo Album</u>
+                </h1>
+            </div>
         </div>
     </div>
 
