--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
                         <a class="nav-link" href="#hero">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#set1">Pics #1</a>
+                        <a class="nav-link" href="#set1">Sleepy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#set2">Pics #2</a>
+                        <a class="nav-link" href="#set2">Tele</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#set3">Pics #3</a>
+                        <a class="nav-link" href="#set3">Baldy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#set4">Pics #4</a>
+                        <a class="nav-link" href="#set4">Get Off</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#set5">Pics #5</a>
+                        <a class="nav-link" href="#set5">Hols</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#set6">Pics #6</a>
+                        <a class="nav-link" href="#set6">Friends</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#set7">Pics #7</a>
+                        <a class="nav-link" href="#set7">Xmas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#set8">Pics #8</a>
+                        <a class="nav-link" href="#set8">House</a>
                     </li>
                 </ul>
             </div>
