put css through autoprefixer

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- ========================== hero Image ========================== -->
     <div class="container-fluid header-container" id="hero">
         <div class="card">
-            <img class="card-img" src="static/images/holly10.jpg" alt="">
+            <img class="card-img" src="static/images/holly10.jpg" alt="Home Image">
              <div class="card-img-overlay text-danger d-flex justify-content-center align-items-end">
                 <h1 class="hero-title">
                    <u> Hollys' Photo Album</u>
